--- a/style.css
+++ b/style.css
@@ -3,6 +3,6 @@
     display: flex;
     padding: 5px;
     background-color: #2A4B7C;
-    color: #fff;
+    color: white;
     margin-top: 150px;
 }
