--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+body {
+    background-image: url("poke.png");
+    width: 100%;
+    background-position: center;
+    font-family: 'Nanum Pen Script', cursive;
+    color: #2A4B7C;
+    font-size: 20px;
+}
+p {
+    font-size: 20px;   
+}
 .footer {
     justify-content: center;
     display: flex;
